k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx
spec:
  replicas: 2
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
        - name: nginx
          image: karczevski/portifolio
          imagePullPolicy: Always
          ports:
            - containerPort: 80

---
kind: Service
apiVersion: v1
metadata:
  name: portifolio-service
spec:
  selector:
    app: nginx
  type: ClusterIP
  ports:
    - name: http
      port: 80
      targetPort: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: portifolio-service
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  # tls:
  # - secretName: tls-secret
  rules:
    - host: "rafael.karc.com.br"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: portifolio-service
                port:
                  number: 80
